[tool.poetry]
name = "python-project-lvl1"
version = "0.0.1"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
